# OmniBrain

./: .env  .gitignore  GOWTHAM work day 1.docx  README.md  WORK REPORT  DAY 2.docx  app.py  config.py  extractor.py  gowtham work 15.docx  main.py  omnibrain_colab.ipynb  pyproject.toml  pyvenv.cfg  requirements.txt  retriever.py  run.py  self_rag.py  test_agents.py  test_guardrails.py  test_vlm.py  vision_vlm.py  vlm_client.py
configs/: settings.py
data/vector_db/: meta.json
data/vector_db/collection/omnibrain_documents/: storage.sqlite
data/vector_db/collection/omnibrain_images/: storage.sqlite
src/chunking/: text_chunker.py  validator.py
src/embeddings/: image_embedding.py
src/ingestion/: image_extractor.py  metadata.py  pipeline.py  report_generator.py  table_extractor.py  text_extractor.py
src/preprocessing/: cleaner.py
src/preprocessing/layout/: classifier.py  extractor.py  parser.py  reading_order.py  relationships.py  section_builder.py  statistics.py  validator.py
src/vector_store/: qdrant_store.py
